<resources>
    <string name="app_name">Fitai</string>
    <string name="facebook_app_id">1912061792394247</string>
    <string name="fb_login_protocol_scheme">fb1912061792394247</string>
    <string name="form_user_text">Username</string>
    <string name="form_email_text">Email</string>
    <string name="form_pass1_text">Type your password</string>
    <string name="form_pass2_text">Re-type your password</string>
    <string name="signup_page_btn">SIgnUp page</string>
    <string name="title_activity_login">Sign in</string>
    <string name="terms">I Agree to the terms and Conditions.</string>
    <string name="read_tnc">Terms and Conditions</string>
    <string name="exit_from_tnc">Exit this window</string>
    <!-- Strings related to transition page -->
    <string name="app_logo">App Logo</string>
    <string name="logo_subtitle1">Variance.AI</string>
    <string name="logo_subtitle2">Making Fitness a habit</string>

    <!-- Strings related to login -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="again_login_password">Re-type Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_up">New User? SIGNUP</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_user">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_match_password">Passwords does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_sign_up">Sign Up</string>

    <!-- Strings related to login -->
    <string name="login_user">Username</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">Existing User? SIGN IN</string>
    <string name="title_activity_dashboard">FITAI</string>
    <string name="title_activity_workout">Workouts</string>
    <string name="title_activity_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="instruction_head">START</string>
    <string name="backdrop_title"> THE ONLY BAD WORKOUT IS THE WORKOUT YOU DID NOT DO</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    <string-array name="title">
        <item>Weight loss</item>
        <item>Flexibility</item>
        <item>Muscles shaper</item>
        <item>Regular fitness</item>
        <item>Meditation</item>
    </string-array>

    <string-array name="title_descrition">
        <item>Get yourself slim</item>
        <item>Get yourself slim</item>
        <item>Get yourself slim</item>
        <item>Get yourself slim</item>
        <item>Get yourself slim</item>
    </string-array>

    <string-array name="programs">
        <item>21 Day Program</item>
        <item>45 Day Program</item>
        <item>60 Day Program</item>
    </string-array>

    <string-array name="programs_des">
        <item>21 Day Program description</item>
        <item>45 Day Program description</item>
        <item>60 Day Program description</item>
    </string-array>

</resources>
