<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.fitai.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center"
        />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/login_user"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/login_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/red_button"
                android:text="@string/action_sign_in"
                android:textStyle="" />

            <Button
                android:id="@+id/email_sign_up_button"
                style="@style/button_text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="#e62e00"
                android:text="@string/action_sign_up"
                android:textStyle="" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.39"
                android:weightSum="1"
                tools:layout_editor_absoluteY="230dp"
                tools:layout_editor_absoluteX="0dp"
                tools:overrideLibrary= "">

                <com.facebook.login.widget.LoginButton
                    xmlns:facebook="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/login_button"
                    style="@style/CustomFbButton"
                    android:layout_width="320dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="10sp"
                    android:paddingTop="10sp"
                    android:textSize="16sp"
                    facebook:com_facebook_login_text="Log in with Facebook"
                    facebook:layout_constraintLeft_toLeftOf="parent"
                    facebook:layout_constraintRight_toRightOf="parent"
                    facebook:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="42dp"
                    facebook:layout_constraintHorizontal_bias="0.6" />


                <com.google.android.gms.common.SignInButton
                    android:layout_width="327dp"
                    android:id="@+id/googlesigninbutton"
                    android:layout_height="45dp"
                    android:layout_centerInParent="true"
                    facebook:layout_constraintLeft_toLeftOf="parent"
                    facebook:layout_constraintRight_toRightOf="parent"
                    facebook:layout_constraintTop_toBottomOf="@+id/login_button"
                    android:layout_marginTop="2dp"
                    facebook:layout_constraintHorizontal_bias="0.6" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
